--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,6 +1,6 @@
 # Plugin Definition below. This is essentially a valid helm values file that will be merged
 # with the other vcluster values during vcluster create or helm install.
 plugin:
-  secret-sync:
+  secret-syncer:
     image: rminz/secret-syncer:v1
     imagePullPolicy: IfNotPresent
