--- a/plugin.yaml
+++ b/plugin.yaml
@@ -2,5 +2,5 @@
 # with the other vcluster values during vcluster create or helm install.
 plugin:
   secret-syncer:
-    image: rminz/secret-syncer:v1
+    image: rminz/vcluster-secret-syncer:v1
     imagePullPolicy: IfNotPresent
